increase min-width of left-panel, to stop the slider covering it
this happend because we increased the menu width

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -84,7 +84,7 @@ option {
 
 #left_panel {
   width: 50%;
-  min-width: 400px;
+  min-width: 450px;
   height: 100%;
   display: flex;
   flex-direction: row;
